<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.lzh</groupId>
    <artifactId>game</artifactId>
    <packaging>pom</packaging>
    <version>${revision}</version>

    <modules>
        <module>framework</module>
        <module>business</module>
        <module>game-gateway</module>
        <module>game-client</module>
        <module>game-start</module>
        <module>parent</module>
        <module>dependencies</module>
    </modules>

    <properties>
        <revision>1.0.1-SNAPSHOT</revision>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

</project>
